--- a/ThoVietNam/res/values/strings.xml
+++ b/ThoVietNam/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Tho Viet Nam</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Bookmarks</string>
     <string name="action_about">About us</string>
 
 </resources>
